--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+target/classes
+target/generated-sources
+target/generated-test-sources
+target/maven-archiver
+target/maven-status
+target/surefire-reports
+target/test-classes
+.idea/
+.gitignore
 application.properties.good
 pom2.xml
