--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,9 @@
             <version>5.4.3.Final</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-            <version>1.4.199</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.2</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
