--- a/src/main/ressources/application.properties
+++ b/src/main/ressources/application.properties
@@ -1,21 +1,20 @@
-# To See H2 Console in Browser:
-# http://localhost:8080/h2-console
-# Enabling H2 Console
-spring.h2.console.enabled=true
-
 # ===============================
-# DB
+# DATABASE CONNECTION
 # ===============================
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/escalade
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.sqlScriptEncoding=UTF-8
+spring.datasource.configuration.maximum-pool-size=30
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Fix Postgres JPA Error:
+# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
