--- a/src/main/ressources/application.properties
+++ b/src/main/ressources/application.properties
@@ -2,7 +2,7 @@
 # DATABASE CONNECTION
 # ===============================
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/escalade
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/escalade
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.sqlScriptEncoding=UTF-8
