--- a/src/main/ressources/application.properties
+++ b/src/main/ressources/application.properties
@@ -16,3 +16,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# =============================================
+# VIEW RESOLVER
+# =============================================
+spring.mvc.view.prefix: /WEB-INF/
+spring.mvc.view.suffix: .jsp
