--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+            <version>1.4.199</version>
+        </dependency>
+
+
 
     </dependencies>
     <build>
