--- a/src/main/ressources/application.properties
+++ b/src/main/ressources/application.properties
@@ -20,5 +20,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # =============================================
 # VIEW RESOLVER
 # =============================================
-#spring.mvc.view.prefix: /WEB-INF/
-#spring.mvc.view.suffix: .jsp
+spring.mvc.view.prefix: /WEB-INF/
+spring.mvc.view.suffix: .jsp
