--- a/src/main/ressources/application.properties
+++ b/src/main/ressources/application.properties
@@ -1,24 +1,26 @@
 # ===============================
 # DATABASE CONNECTION
 # ===============================
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/escalade
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.sqlScriptEncoding=UTF-8
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Fix Postgres JPA Error:
+# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # =============================================
 # VIEW RESOLVER
 # =============================================
 spring.mvc.view.prefix: /WEB-INF/
 spring.mvc.view.suffix: .jsp
+
+server.servlet.context-path=/Escalade
